# jton-go

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  benchmark_test.go  decode.go  doc.go  encode.go  fuzz_test.go  go.mod  go.work  jton.go  jton_test.go  marshal_reflect.go  marshal_reflect_test.go  number.go  number_ryu.go  reflect.go  reflect_test.go  scan.go  simd_amd64.go  simd_amd64.s  simd_amd64_test.go  simd_generic.go  simd_test.go  smoke_test.go  stream.go  stream_test.go  value.go
cmd/jton/: BUILD.bazel  main.go
conformance/: BUILD.bazel  conformance_test.go  doc.go  oracle.py
protojton/: BUILD.bazel  convert.go  go.mod  protojton.go  protojton_test.go  runtime.go
protojton/cmd/protoc-gen-jton/: BUILD.bazel  main.go
protojton/internal/generator/: BUILD.bazel  generator.go
protojton/internal/testpb/: BUILD.bazel  buf.gen.yaml  test.pb.go  test.pb.jton.go  test.proto
protojton/testdata/fuzz/FuzzProtoRoundTrip/: a01501c33f1ddb60
