load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:prefix jton
gazelle(name = "gazelle")

# JSONTestSuite reference vectors, shared with the conformance test.
filegroup(
    name = "testdata",
    srcs = glob(["testdata/**"]),
    visibility = ["//visibility:public"],
)

go_library(
    name = "jton",
    srcs = [
        "decode.go",
        "doc.go",
        "encode.go",
        "jton.go",
        "marshal_reflect.go",
        "number.go",
        "reflect.go",
        "scan.go",
        "simd_amd64.go",
        "simd_amd64.s",
        "simd_generic.go",
        "value.go",
    ],
    importpath = "jton",
    visibility = ["//visibility:public"],
)

go_test(
    name = "jton_test",
    size = "small",  # keep
    srcs = [
        "benchmark_test.go",
        "jton_test.go",
        "marshal_reflect_test.go",
        "reflect_test.go",
        "simd_amd64_test.go",
        "simd_test.go",
        "smoke_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":jton"],
)
