load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:prefix github.com/birdayz/jton-go
# The generated .pb.go is committed and built as ordinary Go, so no Bazel proto
# toolchain is needed.
# gazelle:proto disable_global
gazelle(name = "gazelle")

# JSONTestSuite reference vectors, shared with the conformance test.
filegroup(
    name = "testdata",
    srcs = glob(["testdata/**"]),
    visibility = ["//visibility:public"],
)

go_library(
    name = "jton-go",
    srcs = [
        "decode.go",
        "doc.go",
        "encode.go",
        "jton.go",
        "marshal_reflect.go",
        "number.go",
        "number_ryu.go",
        "reflect.go",
        "scan.go",
        "simd_amd64.go",
        "simd_amd64.s",
        "simd_generic.go",
        "stream.go",
        "value.go",
    ],
    importpath = "github.com/birdayz/jton-go",
    visibility = ["//visibility:public"],
)

go_test(
    name = "jton-go_test",
    srcs = [
        "benchmark_test.go",
        "fuzz_test.go",
        "jton_test.go",
        "marshal_reflect_test.go",
        "reflect_test.go",
        "simd_amd64_test.go",
        "simd_test.go",
        "smoke_test.go",
        "stream_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":jton-go"],
)
