module(
    name = "jton-go",
    version = "0.0.0",
)

# Go
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

# The core module depends only on the Go standard library. The separate
# ./protojton module pulls in google.golang.org/protobuf; feeding both go.mod
# files keeps the proto dependency confined to protojton at the Go level while
# Bazel still builds everything from one workspace.
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")
use_repo(go_deps, "org_golang_google_protobuf")
