load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "protojton",
    srcs = [
        "convert.go",
        "runtime.go",
    ],
    importpath = "github.com/birdayz/jton-go/protojton",
    visibility = ["//visibility:public"],
    deps = [
        "//:jton-go",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "protojton_test",
    srcs = ["protojton_test.go"],
    data = glob(["testdata/**"]),
    deps = [
        ":protojton",
        "//:jton-go",
        "//protojton/internal/testpb",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
    ],
)
