load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "jton_lib",
    srcs = ["main.go"],
    importpath = "github.com/birdayz/jton-go/cmd/jton",
    visibility = ["//visibility:private"],
    deps = ["//:jton-go"],
)

go_binary(
    name = "jton",
    embed = [":jton_lib"],
    visibility = ["//visibility:public"],
)
