load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "protoc-gen-jton_lib",
    srcs = ["main.go"],
    importpath = "github.com/birdayz/jton-go/protojton/cmd/protoc-gen-jton",
    visibility = ["//visibility:private"],
    deps = [
        "//protojton/internal/generator",
        "@org_golang_google_protobuf//compiler/protogen",
        "@org_golang_google_protobuf//types/pluginpb",
    ],
)

go_binary(
    name = "protoc-gen-jton",
    embed = [":protoc-gen-jton_lib"],
    visibility = ["//visibility:public"],
)
